--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <meta name="description" content="">
     <link rel="stylesheet" href="css/app.css">
 </head>
+<header>
+    <h1>Expedition</h1>
+</header>
 
 <body>
 
